WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29347
Incorrect clipping with accelerated compositing content, and position:fixed
https://bugs.webkit.org/show_bug.cgi?id=29347
Summary
Incorrect clipping with accelerated compositing content, and position:fixed
Simon Fraser (smfr)
Reported
2009-09-17 14:33:02 PDT
Created
attachment 39724
[details]
Testcase The attached testcase shows a bug where the position:fixed element is not correctly clipped as you scroll the page (it uses overflow:hidden, but is not a stacking context).
Attachments
Testcase
(1.24 KB, text/html)
2009-09-17 14:33 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, changelog, testcase
(7.77 KB, patch)
2009-09-21 13:37 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-09-21 13:37:26 PDT
Created
attachment 39869
[details]
Patch, changelog, testcase
Simon Fraser (smfr)
Comment 2
2009-09-21 14:32:25 PDT
http://trac.webkit.org/changeset/48599
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug